--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "next": "14.2.15",
     "next-auth": "^4.24.13",
