--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "5.17.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.3",
@@ -17,6 +18,7 @@
     "mongoose": "^9.0.0",
     "next": "14.2.15",
     "next-auth": "^4.24.13",
+    "prisma": "5.17.0",
     "react": "^18",
     "react-dom": "^18",
     "xlsx": "^0.18.5"
