--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "fflate": "^0.8.2",
     "mongoose": "^9.0.0",
     "next": "14.2.15",
     "next-auth": "^4.24.13",
