--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "prisma": "5.17.0",
     "react": "^18",
     "react-dom": "^18",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/node": "^20",
