--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^9.0.0",
     "next": "14.2.15",
     "next-auth": "^4.24.13",
+    "pako": "^2.1.0",
     "prisma": "5.17.0",
     "react": "^18",
     "react-dom": "^18",
