--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "5.17.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/papaparse": "^5.5.1",
     "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
@@ -25,6 +26,7 @@
     "next": "14.2.15",
     "next-auth": "^4.24.13",
     "pako": "^2.1.0",
+    "papaparse": "^5.5.3",
     "prisma": "5.17.0",
     "react": "^18",
     "react-dom": "^18",
