--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^17.2.3",
     "fflate": "^0.8.2",
     "lucide-react": "^0.556.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^9.0.0",
     "next": "14.2.15",
     "next-auth": "^4.24.13",
