--- a/.env.local.example
+++ b/.env.local.example
@@ -1,5 +1,5 @@
-MONGO_URL_MONGODB_URI=mongodb+srv://munhozvinicius_db_user:sIncj8XVn6j7VmZf@cluster0.c71rv4q.mongodb.net/
-NEXTAUTH_SECRET=0dF4ZhvW2q9t4aQx1lxHhTt5FjH4YF2ZCj8vY2mG2RE=
+MONGO_URL_MONGODB_URI=m
+NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 MASTER_EMAIL=munhoz.vinicius@gmail.com
 MASTER_PASSWORD=Theforce85!!
