feat: Add `NEXTAUTH_URL` to environment variables and disable post-login redirection on the login page.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 DATABASE_URL="postgresql://neondb_owner:npg_6ezQcMRSUCI7@ep-wild-star-acpy2pmm-pooler.sa-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
 NEXTAUTH_SECRET=0dF4ZhvW2q9t4aQx1lxHhTt5FjH4YF2ZCj8vY2mG2RE=
 IGNORE_BUILD_ERRORS=true
+NEXTAUTH_URL="http://localhost:3000"
