feat: update Next.js configuration and add support for Portalinfo Cockpit
- Updated `next.config.mjs` to maintain server actions body size limit.
- Added `tsx` as a dependency in `package.json` and `package-lock.json`.
- Introduced a new script `reset:portalinfo` in `package.json` for resetting Portalinfo Cockpit.
- Modified various components to reflect the new naming convention for Portalinfo Cockpit.
- Updated API routes to handle file uploads with a maximum size limit for Portalinfo Cockpit.
- Created a new script to clean existing Cockpit campaigns and recreate the Portalinfo base from scratch.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "fix:master": "tsx fix-master.ts",
+    "reset:portalinfo": "tsx scripts/reset-portalinfo-cockpit.ts",
     "prisma:seed": "node prisma/seed.js",
     "postinstall": "prisma generate"
   },
@@ -41,6 +42,7 @@
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.21.0",
     "typescript": "^5"
   }
 }
